# regex-llm

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
src/: train.py  utils.py
src/fast_regex_csrc/: safe_pcre.cpp  setup.py
