[project]
name = "regex-llm"
version = "0.1.0"
description = "Using RL to teach LLMs to generate better Regex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.1",
    "levenshtein>=0.27.3",
    "openai>=2.9.0",
    "pybind11>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rstr>=3.2.2",
    "torch<2.9.1",
    "tqdm>=4.67.1",
    "trl[vllm]>=0.26.0",
    "wandb>=0.23.1",
]
